--- a/src/ReadLine2.Demo/ReadLine2.Demo.csproj
+++ b/src/ReadLine2.Demo/ReadLine2.Demo.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DebugType>portable</DebugType>
-    <AssemblyName>ReadLine.Demo</AssemblyName>
+    <AssemblyName>ReadLine2.Demo</AssemblyName>
     <OutputType>Exe</OutputType>
-    <PackageId>ReadLine.Demo</PackageId>
+    <PackageId>ReadLine2.Demo</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../ReadLine/ReadLine.csproj" />
+    <ProjectReference Include="../ReadLine2/ReadLine2.csproj" />
   </ItemGroup>
 
 </Project>
